- Should use the correct name if I say thanks

--- a/thanks.txt
+++ b/thanks.txt
@@ -1,1 +1,1 @@
-- Many thanks to Lyra Hartstrings (http://www.minecraftforum.net/members/cooldude1128) for making the grave texture.
+- Many thanks to Lyra Heartstrings (http://www.minecraftforum.net/members/cooldude1128) for making the grave texture.
